# ztmapi-core

./: .gitlab-ci.yml  BusStopParser.cpp  BusStopParser.h  CMakeLists.txt  LL_Parser.cpp  LL_Parser.h  ZP_Parser.cpp  ZP_Parser.h  main.cpp  setup.py
Test/: test.cpp
include/: KDSection.h  LLSection.h  PRSection.h  ScheduleManager.h  Section.h  Stop.h  StopGroup.h  TYSection.h  TransparentSection.h  WKSection.h  ZASection.h  ZPSection.h
include/schema/: Course.h  DayType.h  Departure.h  Line.h  Stop.h  StopGroup.h
src/: KDSection.cpp  LLSection.cpp  PRSection.cpp  ScheduleManager.cpp  Section.cpp  TYSection.cpp  WKSection.cpp  ZASection.cpp  ZPSection.cpp
tests/: test.cpp
