cmake_minimum_required(VERSION 3.15)
project(ztmapi_core)
find_package(PythonInterp)
find_package(Boost COMPONENTS python${PYTHON_VERSION_MAJOR}${PYTHON_VERSION_MINOR})
find_package(PythonInterp 3)
find_package(PythonLibs 3 REQUIRED)
set(CMAKE_CXX_STANDARD 14)

include_directories(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
link_libraries(curl curlpp ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
python_add_module(ztmapi_core main.cpp)